Criando rota para atualizar o status no cliente
